--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "async": "^2.2.0",
     "bcryptjs": "~2.1.0",
+    "bitfinex-api-node": "^1.2.1",
     "coininfo": "^0.1.0",
     "coinkey": "^1.4.0",
     "ejs": "~0.8.4",
