--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "poloniex-api-node": "^1.6.5",
     "q": "^1.5.0",
     "rc": "~0.5.0",
+    "regression": "^2.0.0",
     "sails": "~0.11.0",
     "sails-disk": "~0.10.0",
     "sails-generate-auth": "~0.2.0",
