--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "grunt-html2js": "~0.3.0",
     "grunt-sails-linker": "~0.9.5",
     "grunt-sync": "~0.0.4",
+    "handlebars": "^4.0.11",
     "include-all": "~0.1.3",
     "lodash": "~3.0.0",
+    "mailgun-js": "^0.13.1",
     "passport": "0.2.1",
     "passport-facebook": "^1.0.3",
     "passport-github": "0.1.5",
