--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "grunt-sails-linker": "~0.9.5",
     "grunt-sync": "~0.0.4",
     "handlebars": "^4.0.11",
+    "holtwinters": "0.0.1",
     "include-all": "^4.0.3",
     "mailgun-js": "^0.13.1",
+    "nostradamus": "^0.1.0",
     "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
     "passport-google-oauth": "^1.0.0",
