--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
   "main": "app.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/NovoExperience/NOVO.git"
+    "url": "https://github.com/troverman/investingfor.git"
   },
   "author": "NOVO",
   "license": ""
