--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "NOVO LLC",
   "keywords": [],
   "dependencies": {
+    "@tensorflow/tfjs-node": "^0.1.18",
     "async": "^2.6.0",
     "bcryptjs": "^2.4.3",
     "bollinger-bands": "^3.0.1",
@@ -45,7 +46,7 @@
     "sails": "^0.12.14",
     "sails-mongo": "^0.12.3",
     "synaptic": "^1.1.4",
-    "tulind": "^0.8.11",
+    "tulind": "^0.8.13",
     "validator": "^9.2.0",
     "ws": "^1.0.1"
   },
