--- a/package.json
+++ b/package.json
@@ -5,14 +5,16 @@
   "description": "NOVO LLC",
   "keywords": [],
   "dependencies": {
-    "@tensorflow/tfjs-node": "^0.1.18",
-    "async": "^2.6.0",
+    "@tensorflow/tfjs-node": "^0.1.21",
+    "async": "^2.6.1",
     "bcryptjs": "^2.4.3",
     "bollinger-bands": "^3.0.1",
+    "ccxt": "^1.17.569",
     "coininfo": "^2.2.0",
     "coinkey": "^2.0.0",
+    "crypto-exchange": "^3.0.2",
     "csv-write-stream": "^2.0.0",
-    "ejs": "^2.5.7",
+    "ejs": "^2.6.1",
     "exponential-moving-average": "^1.0.0",
     "fft-js": "0.0.11",
     "grunt": "^0.4.5",
@@ -28,7 +30,7 @@
     "grunt-html2js": "^0.5.1",
     "grunt-sails-linker": "~0.9.5",
     "grunt-sync": "~0.0.4",
-    "handlebars": "^4.0.11",
+    "handlebars": "^4.0.12",
     "holtwinters": "0.0.1",
     "include-all": "^4.0.3",
     "mailgun-js": "^0.20.0",
@@ -39,7 +41,7 @@
     "passport-google-oauth": "^1.0.0",
     "passport-local": "^1.0.0",
     "passport-twitter": "^1.0.4",
-    "poloniex-api-node": "^1.6.5",
+    "poloniex-api-node": "^1.9.0",
     "q": "^1.5.1",
     "regression": "^2.0.1",
     "request": "^2.88.0",
@@ -47,7 +49,7 @@
     "sails-mongo": "^0.12.3",
     "synaptic": "^1.1.4",
     "tulind": "^0.8.13",
-    "validator": "^9.2.0",
+    "validator": "^9.4.1",
     "ws": "^1.0.1"
   },
   "optionalDependencies": {
