updating and refactoring

--- a/assets/favicons/manifest.json
+++ b/assets/favicons/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "investing",
+    "name": "CRE8.CAPITAL",
     "icons": [
         {
             "src": "/android-chrome-192x192.png",
