--- a/package.json
+++ b/package.json
@@ -27,10 +27,10 @@
     "grunt-contrib-less": "0.11.1",
     "grunt-contrib-uglify": "^0.4.1",
     "grunt-contrib-watch": "~0.5.3",
-    "grunt-html2js": "^0.5.1",
+    "grunt-html2js": "^0.7.1",
     "grunt-sails-linker": "~0.9.5",
     "grunt-sync": "~0.0.4",
-    "handlebars": "^4.0.12",
+    "handlebars": "^4.5.3",
     "holtwinters": "0.0.1",
     "include-all": "^4.0.3",
     "mailgun-js": "^0.20.0",
@@ -46,10 +46,11 @@
     "q": "^1.5.1",
     "regression": "^2.0.1",
     "request": "^2.88.0",
-    "sails": "^0.12.14",
+    "sails": "^1.2.3",
+    "sails-hook-grunt": "^4.0.1",
     "sails-mongo": "^0.12.3",
     "synaptic": "^1.1.4",
-    "tulind": "^0.8.13",
+    "tulind": "^0.8.18",
     "validator": "^9.4.1",
     "ws": "^1.0.1"
   },
